# JAs-File-Lock

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE.docx  README.md
src/crypt/: argon_wrapper.cpp  argon_wrapper.h
src/files/: gestor_arch.cpp  gestor_arch.h  meta_dat.h
src/main/: GestorTask.h  TaskRun.h  app.cpp  app.h  main.cpp  proc_signal.cpp  proc_signal.h  task.cpp  task.h
src/main/dialogs/: confirm.cpp  confirm.h  psswrd.cpp  psswrd.h
src/main/tasks/: Encriptar7zip.h  Task_test.h  Usar7zip.h  UsarArgon.cpp  UsarArgon.h  debug.h  debug_2.h  tasksLoad.h
src/utils/: logging.h  utils.cpp  utils.h
src/utils/Interfaces/: datos_task.h  resul_task.h
src/utils/gestor_contra/: gestor_psswd.h
ui/: app.ui  icons.qrc
ui/dialogs/: confirm.ui  psswrd.ui
